[tool.poetry]
name = "source_separation"
version = "0.1.0"
description = ""
authors = ["Ochi Yuma <ochiyuma.ochi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
sounddevice = "^0.4.4"
pyroomacoustics = "^0.6.0"
nara-wpe = "^0.0.8"
simpleaudio = "^1.0.4"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
